objects/BIN_DB_DATAUPDATE_SETTINGS__c.object
<CustomObject>
    <fields>
        <fullName>ADD_EMAILS_FOR_FAILURE_LOGS__c</fullName>
        <label>ADD_EMAILS_FOR_FAILURE_LOGS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIELD_TO_UPDATE__c</fullName>
        <label>FIELD_TO_UPDATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMBER_OF_RECORDS_QUERIED__c</fullName>
        <label>NUMBER_OF_RECORDS_QUERIED</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAL_TIME_ACTIVE_ASSETS_SOQL_1__c</fullName>
        <label>REAL_TIME_ACTIVE_ASSETS_SOQL_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REAL_TIME_ACTIVE_ASSETS_SOQL_2__c</fullName>
        <label>REAL_TIME_ACTIVE_ASSETS_SOQL_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REAL_TIME_TRIAL_ASSETS_SOQL_1__c</fullName>
        <label>REAL_TIME_TRIAL_ASSETS_SOQL_1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REAL_TIME_TRIAL_ASSETS_SOQL_2__c</fullName>
        <label>REAL_TIME_TRIAL_ASSETS_SOQL_2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RUN_ACTIVE_QUERY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RUN_ACTIVE_QUERY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUN_INTRIAL_QUERY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RUN_INTRIAL_QUERY</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>